# yourwolf-monorepo

./: .gitignore  AGENTS.md  README.md  Werewolf - Data_structure_study - Abilities.csv
yourwolf-backend/: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
yourwolf-backend/alembic/: env.py
yourwolf-backend/alembic/versions/: 20260201_181459_initial_migration_create_all_tables.py  20260302_000000_add_game_sessions_and_game_roles.py  20260302_120000_add_card_counts_and_role_dependencies.py  20260326_000000_add_is_primary_team_role_to_roles.py  20260328_000000_update_doppelganger_copycat_wake_order.py  20260328_010000_add_wake_order_sequence_to_game_sessions.py
yourwolf-backend/app/: __init__.py  config.py  database.py  main.py
yourwolf-backend/app/models/: __init__.py  ability.py  ability_step.py  game_role.py  game_session.py  role.py  role_dependency.py  types.py  user.py  win_condition.py
yourwolf-backend/app/routers/: __init__.py  abilities.py  games.py  health.py  roles.py
yourwolf-backend/app/schemas/: __init__.py  ability.py  base.py  game.py  role.py
yourwolf-backend/app/seed/: __init__.py  __main__.py  abilities.py  roles.py
yourwolf-backend/app/services/: __init__.py  (+4 more)
yourwolf-backend/tests/: __init__.py  conftest.py  test_abilities.py  test_ability_service.py  test_game_service.py  test_games_router.py  test_health.py  test_models.py  test_role_service.py  test_role_validation.py  test_roles.py  test_schemas.py  test_script_service.py  test_seed.py
(+291 files in other folders)
